--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "java.project.sourcePaths": [
+        "Doit_Java_04",
         "Doit_Java_03",
         "Doit_Java_02/src",
         "Doit_Java_01/src",
-        "Doit_Java_04"
+        "Doit_Java_05"
     ]
 }
