--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Doit_Java_01/src",
         "Doit_Java_02/src",
         "Doit_Java_03/src",
-        "Doit_Java_04/src"
+        "Doit_Java_04/src",
+        "Doit_Java_05/src"
     ]
 }
