--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Doit_Java_02/src",
         "Doit_Java_03/src",
         "Doit_Java_04/src",
-        "Doit_Java_05/src"
+        "Doit_Java_05/src",
+        "Doit_Java_06/src"
     ]
 }
