--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Doit_Java_04/src",
         "Doit_Java_05/src",
         "Doit_Java_06/src",
-        "Doit_Java_07/src"
+        "Doit_Java_07/src",
+        "Doit_Java_08/src"
     ]
 }
