--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
     "java.project.sourcePaths": [
-        "Doit_Java_01/src",
-        "Doit_Java_02/src",
-        "Doit_Java_03/src",
-        "Doit_Java_04/src",
-        "Doit_Java_05/src",
-        "Doit_Java_06/src",
-        "Doit_Java_07/src",
-        "Doit_Java_08/src"
+        "Doit_Java_01\\src",
+        "Doit_Java_02\\src",
+        "Doit_Java_03\\src",
+        "Doit_Java_04\\src",
+        "Doit_Java_05\\src",
+        "Doit_Java_06\\src",
+        "Doit_Java_07\\src",
+        "Doit_Java_08\\src",
+        "Doit_Java_09\\src"
     ]
 }
