--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Doit_Java_06\\src",
         "Doit_Java_07\\src",
         "Doit_Java_08\\src",
-        "Doit_Java_09\\src"
+        "Doit_Java_09\\src",
+        "Doit_Java_10\\src"
     ]
 }
