--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Doit_Java_07\\src",
         "Doit_Java_08\\src",
         "Doit_Java_09\\src",
-        "Doit_Java_10\\src"
+        "Doit_Java_10\\src",
+        "Doit_Java_11\\src"
     ]
 }
