--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Doit_Java_08\\src",
         "Doit_Java_09\\src",
         "Doit_Java_10\\src",
-        "Doit_Java_11\\src"
+        "Doit_Java_11\\src",
+        "Doit_Java_12\\src"
     ]
 }
