--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Doit_Java_09\\src",
         "Doit_Java_10\\src",
         "Doit_Java_11\\src",
-        "Doit_Java_12\\src"
+        "Doit_Java_12\\src",
+        "Doit_Java_13\\src"
     ]
 }
