--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Doit_Java_10\\src",
         "Doit_Java_11\\src",
         "Doit_Java_12\\src",
-        "Doit_Java_13\\src"
+        "Doit_Java_13\\src",
+        "Doit_Java_14\\src"
     ]
 }
