--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Doit_Java_11\\src",
         "Doit_Java_12\\src",
         "Doit_Java_13\\src",
-        "Doit_Java_14\\src"
+        "Doit_Java_14\\src",
+        "Doit_Java_15\\src"
     ]
 }
