--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "Doit_Java_12\\src",
         "Doit_Java_13\\src",
         "Doit_Java_14\\src",
-        "Doit_Java_15\\src"
+        "Doit_Java_15\\src",
+        "Doit_Java_16\\src"
     ]
 }
